<resources>
    <string name="app_name">SelfHack</string>
    <string name="attack_damage">Attack Damage:</string>
    <string name="level_up_button">+</string>
    <string name="level_down_button">-</string>
    <string name="attack_speed">Attack Speed:</string>
    <string name="health">Health:</string>
    <string name="armor">Armor:</string>
    <string name="level">Level:</string>
    <string name="xp">Xp:</string>
</resources>
